[package]
name = "tic2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
structopt = "0.3"
tokio-stream = "0.1"
tokio-serial = "5.4.5"
rumqttc = "0.18"
